# echoslam_acoustics

./: .gitignore  README.md
doa_test/: Delay and sum.ipynb
doa_test/1source_doa/: 8ch_hello_az0_el30_1m_48k.npy  Readme.md  pyroomacoustics-sim-1-source.ipynb
dsp_test/: bandpass.py
experiments/: README.md  kalman_1D.py
experiments/env_mapping/: trial1.py
experiments/pipebots/: lateral_pipe.py  pipe_shoebox.py  pipe_trial1.py  pipe_trial2.py  t_pipe.py
experiments/pipebots/data/: t_pipe.yaml
object_mapping/: trial1.py
pra_test/: box_make.py  obstacle.py  polygon_make.py  pyramid_make.py
ros_acoustics/: CMakeLists.txt  package.xml
ros_acoustics/launch/: basic_test_launch.py
ros_acoustics/msg/: FloatArray.msg
ros_acoustics/scripts/: cli_compute_rir.py  srv_compute_rir.py  srv_compute_waveforms.py
ros_acoustics/srv/: ComputeRIR.srv  ComputeWaveforms.srv
ros_acoustics/test/: cli_compute_rir.py  cli_compute_waveforms.py
utils/: gen_utils.py  pra_utils.py  pra_utils_test.py  test.py  yaml_test.py
utils/room_data/: test1.yaml
